# lapse-hs

./: .gitignore  404.html  CNAME  README.md  flake.nix  index.html  lapse-hs.cabal  lapse.cabal  mkdocs.yml  repl-example.lp  search.html  test-code.lp  test.lp
.github/workflows/: build.yml
app/: Main.hs
docs/: CNAME  index.md
docs/modules/: colors.md  fs.md  gcode.md  index.md  json.md  web.md
example/: example.lp  fibonacci.lp  fs.lp  gcode.lp  json.lp  repl-example.lp  web-client.lp  web-server.lp
modules/: colors.lp  gcode.lp  index.html
modules/colors/: index.html
modules/fs/: index.html
modules/gcode/: index.html
modules/json/: index.html
modules/web/: index.html
search/: search_index.json
src/: Lapse.hs  Lib.hs
src/Lapse/: Cond.hs  Eval.hs  Infix.hs  Json.hs  Lambda.hs  Modules.hs  Operators.hs  Parser.hs  Prelude.hs  Scopes.hs  Types.hs  Web.hs
src/Lapse/Modules/: FS.hs  Json.hs  Web.hs
src/Lapse/Modules/Web/: Client.hs  Server.hs  Types.hs
src/Lapse/Modules/Web/Server/: Get.hs  Post.hs
src/Lapse/Web/: Client.hs  Server.hs  Types.hs
src/Lapse/Web/Server/: Get.hs  Post.hs
test/: Main.hs
