cabal-version:      3.0
name:               lapse-hs
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
build-type:         Simple
common warnings
    ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      base ^>=4.18.2.1
  default-language: GHC2021

executable lapse-hs
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1
        , lapse-hs
    hs-source-dirs:   app
    default-language: GHC2021
