cabal-version:      3.0
name:               lapse
version:            1.4.1
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
build-type:         Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Lapse
    , Lapse.Operators
    , Lapse.Eval
    , Lapse.Scopes
    , Lapse.Types
    , Lapse.Lambda
    , Lapse.Parser
    , Lapse.Modules
    , Lapse.Web
    , Lapse.Web.Client
    , Lapse.Web.Server
    , Lapse.Web.Server.Get
    , Lapse.Web.Server.Post
    , Lapse.Web.Types
    , Lapse.Json
  hs-source-dirs:
    src
  build-depends:
    base >=4.18.2.1 && <4.20
    , containers
    , mtl
    , wreq
    , bytestring
    , text
    , lens
    , case-insensitive
    , warp
    , wai
    , http-types
    , aeson
    , text
    , vector
  default-language: GHC2021

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >=4.18.2.1 && <4.20
    , lapse
    , tasty
    , tasty-hunit
  default-language: GHC2021

executable lapse
  import:           warnings
  main-is:          Main.hs
  build-depends:
    base >=4.18.2.1 && <4.20
    , deepseq
    , lapse
  hs-source-dirs:   app
  default-language: GHC2021
