cabal-version:      3.0
name:               lapse
version:            2.0.2
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
build-type:         Simple
data-files:         modules/**/*.lp

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Lapse
    , Lapse.Operators
    , Lapse.Eval
    , Lapse.Scopes
    , Lapse.Types
    , Lapse.Lambda
    , Lapse.Parser
    , Lapse.Modules
    , Lapse.Modules.Web
    , Lapse.Modules.Web.Client
    , Lapse.Modules.Web.Server
    , Lapse.Modules.Web.Server.Get
    , Lapse.Modules.Web.Server.Post
    , Lapse.Modules.Web.Types
    , Lapse.Modules.Json
    , Lapse.Modules.FS
  hs-source-dirs:
    src
  build-depends:
    base >=4.18.2.1 && <4.20
    , containers
    , directory
    , file-embed
    , mtl
    , wreq
    , bytestring
    , text
    , lens
    , case-insensitive
    , warp
    , wai
    , http-types
    , aeson
    , text
    , vector
  default-language: GHC2021

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >=4.18.2.1 && <4.20
    , containers
    , lapse
    , mtl
    , tasty
    , tasty-hunit
  default-language: GHC2021

executable lapse
  import:           warnings
  main-is:          Main.hs
  build-depends:
    base >=4.18.2.1 && <4.20
    , deepseq
    , lapse
  hs-source-dirs:   app
  default-language: GHC2021
